--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -35,6 +35,15 @@
     <None Update="res\BlackRook.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="res\Minimize.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="res\Quit.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="res\Restart.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="res\WhiteBishop.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
