move generation simplified

--- a/Chess/Chess.csproj
+++ b/Chess/Chess.csproj
@@ -31,6 +31,9 @@
     <None Update="res\BlackRook.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="res\DiceButton.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="res\MinimizeButton.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
